--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,15 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   provider: ^6.1.2
+  intl: ^0.17.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_line_sdk:
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
