--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
   google_fonts: ^4.0.3
   provider: ^6.1.2
   intl: ^0.17.0
+  get: ^4.6.6
+  go_router: ^14.3.0
+  shared_preferences: ^2.3.2
+  dio: ^5.7.0
+  cached_network_image: ^3.4.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 
 
@@ -45,6 +53,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
